ex5-services+ingress/mariaDBdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
spec:
  selector:
        matchLabels:
          app: mariadb
  replicas: 1
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 3306
