ex5-services+ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
   name: demo-full-nginx
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
   rules:
   - host: 
     http:
       paths:
       - path: /backend
         backend:
           serviceName: phpmyadmin-service
           servicePort: 80
       - path: /app
         backend:
           serviceName: nginx-service
           servicePort: 80
